// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex arrays 1`] = `
AppNode {
  "children": Array [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "commitNode": RootTestNode {
    "lastCommit": TestCommit {
      "$applied": 1,
      "$started": 0,
      "children": Array [],
      "node": [Circular],
    },
  },
  "parent": null,
  "render": [Function],
  "state": null,
}
`;

exports[`nested arrays 1`] = `
AppNode {
  "children": Array [
    AppNode {
      "children": Array [
        null,
      ],
      "commitNode": null,
      "parent": [Circular],
      "render": [Function],
      "state": null,
    },
  ],
  "commitNode": RootTestNode {
    "lastCommit": TestCommit {
      "$applied": 1,
      "$started": 0,
      "children": Array [],
      "node": [Circular],
    },
  },
  "parent": null,
  "render": [Function],
  "state": null,
}
`;

exports[`nested arrays 2`] = `
AppNode {
  "children": Array [
    AppNode {
      "children": Array [
        null,
      ],
      "commitNode": null,
      "parent": [Circular],
      "render": [Function],
      "state": null,
    },
  ],
  "commitNode": RootTestNode {
    "lastCommit": TestCommit {
      "$applied": 1,
      "$started": 0,
      "children": Array [],
      "node": [Circular],
    },
  },
  "parent": null,
  "render": [Function],
  "state": null,
}
`;

exports[`simple build tree 1`] = `
AppNode {
  "children": Array [
    AppNode {
      "children": Array [
        null,
      ],
      "commitNode": null,
      "parent": [Circular],
      "render": [Function],
      "state": null,
    },
  ],
  "commitNode": RootTestNode {
    "lastCommit": TestCommit {
      "$applied": 1,
      "$started": 0,
      "children": Array [],
      "node": [Circular],
    },
  },
  "parent": null,
  "render": [Function],
  "state": null,
}
`;
